--- a/views/index.ejs
+++ b/views/index.ejs
@@ -45,8 +45,7 @@
 
 	<div class="col-md-4 col-md-offset-4 form-card">
 		<div>
-			<p>Register Now
-			</p>
+			<p>Register Now checking			</p>
 		</div>
 		<div class="form-group">
 			<form id="form1" method="post">
