--- a/views/index.ejs
+++ b/views/index.ejs
@@ -45,7 +45,7 @@
 
 	<div class="col-md-4 col-md-offset-4 form-card">
 		<div>
-			<p>Register Now checking		2	</p>
+			<p>Register Now checking sethu	</p>
 		</div>
 		<div class="form-group">
 			<form id="form1" method="post">
